--- a/LibFlycoTabLayout/src/main/res/layout/layout_tab.xml
+++ b/LibFlycoTabLayout/src/main/res/layout/layout_tab.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:mv="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:bgtv="http://schemas.android.com/apk/res-auto"
     android:clipChildren="false"
     android:clipToPadding="false">
 
@@ -14,7 +14,8 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:singleLine="true"
-        tools:text="文字" />
+        tools:text="文字"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/tv_tab_image"
@@ -23,21 +24,22 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:scaleType="centerInside"
-        tools:src="@mipmap/share_link" />
+        tools:src="@mipmap/share_link"
+        tools:visibility="gone" />
 
-    <com.flyco.tablayout.widget.MsgView
+    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
         android:id="@+id/rtv_msg_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="#ffffff"
-        android:textSize="11.5sp"
+        android:textSize="11dp"
         android:visibility="gone"
-        tools:visibility="visible"
+        bgtv:bgtv_backgroundColor="#FD481F"
+        bgtv:bgtv_isRadiusHalfHeight="true"
+        bgtv:bgtv_strokeColor="#ffffff"
+        bgtv:bgtv_strokeWidth="1dp"
         tools:text="3"
-        mv:mv_backgroundColor="#FD481F"
-        mv:mv_isRadiusHalfHeight="true"
-        mv:mv_strokeColor="#ffffff"
-        mv:mv_strokeWidth="1dp" />
+        tools:visibility="visible" />
 
 </RelativeLayout>
