--- a/LibFlycoTabLayout/src/main/res/layout/layout_tab_top.xml
+++ b/LibFlycoTabLayout/src/main/res/layout/layout_tab_top.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:bgtv="http://schemas.android.com/apk/res-auto"
     android:clipChildren="false"
     android:clipToPadding="false">
 
@@ -26,9 +26,8 @@
             android:singleLine="true"/>
     </LinearLayout>
 
-    <com.flyco.tablayout.widget.MsgView
+    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
         android:id="@+id/rtv_msg_tip"
-        xmlns:mv="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/ll_tap"
@@ -36,9 +35,10 @@
         android:textColor="#ffffff"
         android:textSize="11.5sp"
         android:visibility="gone"
-        mv:mv_backgroundColor="#FD481F"
-        mv:mv_isRadiusHalfHeight="true"
-        mv:mv_strokeColor="#ffffff"
-        mv:mv_strokeWidth="1dp"/>
+        bgtv:bgtv_backgroundColor="#FD481F"
+        bgtv:bgtv_isRadiusHalfHeight="true"
+        bgtv:bgtv_strokeColor="#ffffff"
+        bgtv:bgtv_strokeWidth="1dp" />
+
 
 </RelativeLayout>
