--- a/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
+++ b/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
@@ -20,30 +20,26 @@
         app:loopCount="1"
         tools:src="@mipmap/icon" />
 
-    <TextView
+    <com.bihe0832.android.lib.ui.textview.TextViewWithBackground
         android:id="@+id/tab_tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="-8dp"
+        android:layout_marginLeft="-6dp"
         android:layout_marginBottom="-6dp"
-        android:background="@drawable/common_background_red_dot_msg"
         android:gravity="center"
         android:minWidth="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:textColor="@color/white"
         android:textSize="9dp"
-        android:visibility="visible"
+        android:visibility="gone"
+        app:bgtv_backgroundColor="#FD481F"
+        app:bgtv_isRadiusHalfHeight="true"
+        app:bgtv_strokeColor="#FD481F"
+        app:bgtv_strokeWidth="1dp"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
         app:layout_constraintStart_toEndOf="@+id/tab_icon"
         tools:text="88" />
-
-    <View
-        android:id="@+id/tab_tips_dot"
-        android:layout_width="6dp"
-        android:layout_height="6dp"
-        android:background="@drawable/common_background_red_dot"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/tab_icon"
-        app:layout_constraintStart_toEndOf="@+id/tab_icon" />
 
     <TextView
         android:id="@+id/tab_title"
