--- a/Framework/src/main/res/drawable-xxhdpi/common_background_red_dot_msg.xml
+++ b/Framework/src/main/res/drawable-xxhdpi/common_background_red_dot_msg.xml
@@ -3,6 +3,9 @@
     android:shape="rectangle">
     <solid android:color="#ff0000" />
     <corners android:radius="8dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#ff0000" />
     <padding
         android:left="4dp"
         android:right="4dp" />
