红点样式优化统一

--- a/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
+++ b/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
@@ -28,8 +28,8 @@
         android:layout_marginBottom="-6dp"
         android:gravity="center"
         android:minWidth="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:paddingLeft="@dimen/com_bihe0832_tab_red_msg_padding"
+        android:paddingRight="@dimen/com_bihe0832_tab_red_msg_padding"
         android:textColor="@color/white"
         android:textSize="9dp"
         android:visibility="gone"
