--- a/BaseDebug/src/main/res/layout/debug_main_activity_framelayout.xml
+++ b/BaseDebug/src/main/res/layout/debug_main_activity_framelayout.xml
@@ -20,13 +20,13 @@
         <FrameLayout
             android:id="@+id/common_fragment_content"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:scrollbars="none" />
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/navigation_drawer_fl"
-        android:layout_width="300dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:background="@color/permission_window_bg" />
