通用资源统一、Activity进出动画整理、增加分享通用UI

--- a/BaseDebug/src/main/res/layout/activity_test_text.xml
+++ b/BaseDebug/src/main/res/layout/activity_test_text.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/common_toolbar"
-        style="@style/frameWorkAppTheme.Toolbar.Light"
+        style="@style/AAF.AppTheme.Toolbar.Light"
         app:title="HTTP Request" />
 
 
