--- a/CommonList/src/main/res/layout/common_activity_list_swipe.xml
+++ b/CommonList/src/main/res/layout/common_activity_list_swipe.xml
@@ -8,11 +8,12 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/common_activity_list_toolbar"
-        style="@style/frameWorkAppTheme.Toolbar.Light"
+        style="@style/AAF.AppTheme.Toolbar.Light"
         app:title="服务" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/activity_list_refresh"
+        android:background="#4D000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
