--- a/BaseDebug/src/main/res/layout/activity_touch_region.xml
+++ b/BaseDebug/src/main/res/layout/activity_touch_region.xml
@@ -11,7 +11,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/common_toolbar"
-        style="@style/frameWorkAppTheme.Toolbar.Light"
+        style="@style/AAF.AppTheme.Toolbar.Light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
