--- a/BaseDebug/src/main/res/layout/debug_main_activity_framelayout.xml
+++ b/BaseDebug/src/main/res/layout/debug_main_activity_framelayout.xml
@@ -14,7 +14,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/common_toolbar"
-            style="@style/frameWorkAppTheme.Toolbar.Light"
+            style="@style/AAF.AppTheme.Toolbar.Light"
             app:title="是防守打法" />
 
         <FrameLayout
