--- a/CommonAceEditor/src/main/res/layout/activity_edit_layout.xml
+++ b/CommonAceEditor/src/main/res/layout/activity_edit_layout.xml
@@ -9,7 +9,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/common_toolbar"
-        style="@style/frameWorkAppTheme.Toolbar.Light"
+        style="@style/AAF.AppTheme.Toolbar.Light"
         app:title="">
 
         <ImageView
