--- a/BaseDebug/src/main/res/layout/dialog_test_permission.xml
+++ b/BaseDebug/src/main/res/layout/dialog_test_permission.xml
@@ -1,6 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/dialog_layout"
+        android:id="@+id/dialog_content_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/com_bihe0832_common_dialog_bg">
