--- a/LibDialog/src/main/res/layout/com_bihe0832_common_bottom_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_bottom_dialog_layout.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/dialog_layout"
+        android:id="@+id/dialog_content_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/com_bihe0832_common_bottom_dialog_bg"
