--- a/LibDialog/src/main/res/layout/com_bihe0832_common_bottom_list_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_bottom_list_dialog_layout.xml
@@ -1,12 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/root_layout"
     android:gravity="bottom"
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/dialog_layout"
+        android:id="@+id/dialog_content_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/com_bihe0832_common_bottom_dialog_bg"
@@ -37,6 +36,6 @@
             android:text="取消"
             android:textColor="@drawable/com_bihe0832_common_dialog_negative_style"
             android:textSize="@dimen/com_bihe0832_dialog_button_text_size" />
-        
+
     </LinearLayout>
 </LinearLayout>
