--- a/LibDialog/src/main/res/layout/com_bihe0832_common_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_dialog_layout.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/dialog_layout"
+    android:id="@+id/dialog_content_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
