--- a/LibViewExt/src/main/res/values/com_bihe0832_common_base_select_res.xml
+++ b/LibViewExt/src/main/res/values/com_bihe0832_common_base_select_res.xml
@@ -6,6 +6,9 @@
     <color name="com_bihe0832_select_state_pressed">@color/com_bihe0832_select_state_checked</color>
     <color name="com_bihe0832_select_state_focused">@color/com_bihe0832_select_default</color>
     <color name="com_bihe0832_select_bg">#FFFFFF</color>
+    <color name="transparent_white">#00FFFFFF</color>
+    <color name="transparent_black">#00000000</color>
+    <color name="transparent">@color/transparent_black</color>
 
     <dimen name="com_bihe0832_select_item_width">12dp</dimen>
     <dimen name="com_bihe0832_select_border_width">1dp</dimen>
