--- a/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_tips.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_card_debug_tips.xml
@@ -22,6 +22,7 @@
         android:textSize="12dp" />
 
     <View
+        android:id="@+id/test_bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
