--- a/CommonBottomTab/src/main/res/layout/common_tab_simple.xml
+++ b/CommonBottomTab/src/main/res/layout/common_tab_simple.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:paddingTop="4dp"
     android:paddingBottom="4dp">
 
@@ -17,6 +17,8 @@
         app:layout_constraintBottom_toTopOf="@+id/tab_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         app:loopCount="1"
         tools:src="@mipmap/icon" />
 
@@ -45,12 +47,14 @@
         android:id="@+id/tab_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="广场"
         android:textColor="#3E3E3E"
         android:textSize="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tab_icon"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="广场" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
